--- a/public/404.html
+++ b/public/404.html
@@ -36,7 +36,7 @@
     
 
     <link rel="shortcut icon"
-        href="https://timemachineforpeace.wp.computer/images/favicon.png">
+        href="https://timemachineforpeace.wp.computer/images/UPC.png">
 
     
     <link href="https://timemachineforpeace.wp.computer/index.xml" rel="alternate" type="application/rss+xml" title="Time Machine For Peace!" />
