--- a/public/about/index.html
+++ b/public/about/index.html
@@ -8,19 +8,19 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="referrer" content="no-referrer">
-    <meta name="description" content="A description of the page" />
+    <meta name="description" content="About the Time Machine For Peace social invention project." />
     <meta property="og:site_name" content="Time Machine For Peace!" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://timemachineforpeace.wp.computer/about/" />
     <meta property="og:title" content="About the Time Machine For Peace (a social invention project)" />
     <meta property="og:image" content="https://timemachineforpeace.wp.computer/" />
-    <meta property="og:description" content="A description of the page" />
+    <meta property="og:description" content="About the Time Machine For Peace social invention project." />
 
     <meta name="twitter:card" content="summary_large_image" />
     
     <meta name="twitter:title" content="About the Time Machine For Peace (a social invention project)" />
-    <meta name="twitter:description" content="A description of the page" />
+    <meta name="twitter:description" content="About the Time Machine For Peace social invention project." />
     <meta name="twitter:image" content="https://timemachineforpeace.wp.computer/" />
 
     <link rel="canonical" href="https://timemachineforpeace.wp.computer/about/">
@@ -114,6 +114,7 @@
 <p>-Blair</p>
 <p>CTA:
 I need help registering these trademarks. <a href="mailto:timemachine@wp.computer">Contact me to collaborate/contribute.</a> Thank you.</p>
+<p><em>Propose site changes and edits using <a href="https://github.com/wp-computer/timemachineforpeace.git">github</a>. If you don&rsquo;t know how to use github, it might be a fun and valuable resume-builder to teach yourself how!</em></p>
 <div class="figure">
 <p><img src="https://timemachineforpeace.wp.computer/images/booth/main0612.jpg" alt=""></p>
 <p class="caption">Welcome.</p>
