--- a/public/about/index.html
+++ b/public/about/index.html
@@ -96,15 +96,15 @@
 <p>First, some symbols to make communication easier:</p>
 <div class="figure">
 <p><img src="https://timemachineforpeace.wp.computer/images/UPC.png" alt=""></p>
-<p class="caption">Symbol for 'The Universal Peace Computer (time machine (or trademark))</p>
+<p class="caption">Symbol for 'The Universal Peace Computer' (time machine (or trademark))</p>
 <div class="figure">
 <p><img src="https://timemachineforpeace.wp.computer/images/WPC.png" alt=""></p>
-<p class="caption">Symbol for 'world piece computer (time machine (or trademark))</p>
+<p class="caption">Symbol for 'world piece computer' (time machine (or trademark))</p>
 </div>
 </div>
 <div class="figure">
 <p><img src="https://timemachineforpeace.wp.computer/images/WP.png" alt=""></p>
-<p class="caption">Symbol for 'world piece (or peace, if referring to the ideal) (time machine (or trademark))</p>
+<p class="caption">Symbol for 'world piece' (or peace, if referring to the ideal) (time machine (or trademark))</p>
 </div>
 <p>For now, this site is a blog chronicling my process and experience running the Alaska, Anchorage Market &lsquo;Time Machine For Peace!&rsquo; booth. This will be the primary communication vehicle for getting the point across, and getting this project off the ground, up and running.</p>
 <p>The booth is basically a Research and Development lab. I quit my dayjob and spent almost all of my personal savings to set the overall outreach project up (not recommended at all for trying at home, unless you put your time in preparing for the possible crash-and-burn). The investment is meant to put me in a position where I can share the monsterous idea in my head with all sorts of different people, to attain valuable wisdom and feedback I need to make the best-informed decisions possible for how to steer this project into the future. <strong>You will be the navigational experts guiding this time machine.</strong> I am just the captain.</p>
