--- a/public/about/index.html
+++ b/public/about/index.html
@@ -93,8 +93,24 @@
                         
     <p>Peace is a process, not a result.</p>
 <p>This is a site to chronicle and coordinate the Time Machine For Peace social invention project.</p>
-<p>First, some symbols to make communication easier:</p>
-<div class="figure">
+<p>Please visit github to view site change history.</p>
+<p>~</p>
+<p>A NOTE ON PERSONAL STYLE:</p>
+<p><em>I am the producer right now. Until that changes for this project, expect constant changes everywhere, but consistently inconsistently. I am fickle; besides my unpredictability, I am unpredictable. This is because I am constantly experimenting with ideas, I move extremely quickly, and because my time is so precious to me that I refuse to afford time to explain my every move unless that explanation justifies the time spent explaining. I am always tinkering with new ways of doing things, so please do not be surprised if say one thing, but end up not following through with that thing. &ndash;chances are I found a better way to thing that thing.</em></p>
+<p><em>To contradict myself, a singular consistency that will not waiver is my devotion to this project (realizing this vision in my head that has been painfully resolving for over a decade now). This consistency is the highly nonlinear concept map in my head that I use for general communication. To be honest, I place this project above everything else, because in my world, everything else depends on this project.</em></p>
+<p><em>Thank you for your patience while I figure things out as I go.</em></p>
+<p>~</p>
+<p>For now, this site is a blog chronicling my process and experience running the Alaska, Anchorage Market &lsquo;Time Machine For Peace!&rsquo; booth, and my process underlying how I am going about attempting to get this project off the ground. This will be the primary communication vehicle for getting the point across, and getting this project off the ground, up and running.</p>
+<p>Right now my primary distraction (frustration) is to figure out the best way to support myself, so that I can devote my undivided attention to the project. My problems has been that in the past, the standard fulltime-job approach would only leave me enough freetime to devote one additional job&rsquo;s worth of time to this project. I would neglect social life, because serious study has been more important to me if forced to choose. But this makes me bad-crazy. I will not do that anymore. I am devoting myself wholly to this for a change. The money problem is too distracting. My objective is to solve it by the end of the summer, worst case.</p>
+<p>To achieve this objecetive is to free up my time to get to the real important objective: planting brain-seeds (peace nuts), by having conversations with people for the purpose of highly distributed broadcast communication, to get the idea across, so that we can have a global conversation about it. The strategy is to take this nonlinear concept map in my head, and collect all the different linear versions of expression it takes on with all the different people I talk to, and then identify themes and common versions that work, then integrate those themes into a generalized linear version for widescale dissemination. (a book or a movie, or whatever)</p>
+<p>So the booth is basically a Research and Development lab. All of the content platforms you might find me on will <strong>always</strong> be research and development labs. (My identity is a research and development lab. Every interaction I have with people is a research and development lab.) I recently quit my dayjob and spent almost all of my personal savings to set the overall outreach project up (not recommended at all for trying at home, unless you put your time in preparing for the possible crash-and-burn). The investment is meant to put me in a position where I can share the monsterous idea in my head with all sorts of different people, to attain valuable wisdom and feedback I need to make the best-informed decisions possible for how to steer this project into the future. <strong>You will be the navigational experts guiding this time machine.</strong> I am just the captain.</p>
+<p>So come travel timespace with me! Let&rsquo;s travel to better future, or improve the present, or get back to good things we may have lost touch with. &hellip;together, but as a group of diverse individuals all inventing creative ways to communicate better with one another&hellip;not as some group mob-mind.</p>
+<p>My <a href="https://blairmunroakusa.wp.computer/">personal page</a> is a good place for going deep with experimental theory and conceptual underpinnings. Otherwise, this site is a good place to call homebase if you are interested in the idea of universal peace as an invention project, inventing a process for linking our multitude of unique worlds together, so that we can all reap more profit that we otherwise would without peace as a universal process. (Creation and inclusion will always be more profitable than destruction and exclusion. I believe this.)</p>
+<p>I plan to use this blog as an origin, a central point to originate promotional activities for this project. Next stop, Kickstarter. I need to solve the money problem quicklike.</p>
+<p>This domain space is meant to be the communal space in cyber-world to experiment with a new way of going about doing social media.</p>
+<p>-Blair</p>
+<p>Some symbols to make communication easier:</p>
+<div class="figure" style="figure-size:small;">
 <p><img src="https://timemachineforpeace.wp.computer/images/UPC.png" alt=""></p>
 <p class="caption">Symbol for 'The Universal Peace Computer' (time machine (or trademark))</p>
 <div class="figure">
@@ -106,15 +122,10 @@
 <p><img src="https://timemachineforpeace.wp.computer/images/WP.png" alt=""></p>
 <p class="caption">Symbol for 'world piece' (or peace, if referring to the ideal) (time machine (or trademark))</p>
 </div>
-<p>For now, this site is a blog chronicling my process and experience running the Alaska, Anchorage Market &lsquo;Time Machine For Peace!&rsquo; booth. This will be the primary communication vehicle for getting the point across, and getting this project off the ground, up and running.</p>
-<p>The booth is basically a Research and Development lab. I quit my dayjob and spent almost all of my personal savings to set the overall outreach project up (not recommended at all for trying at home, unless you put your time in preparing for the possible crash-and-burn). The investment is meant to put me in a position where I can share the monsterous idea in my head with all sorts of different people, to attain valuable wisdom and feedback I need to make the best-informed decisions possible for how to steer this project into the future. <strong>You will be the navigational experts guiding this time machine.</strong> I am just the captain.</p>
-<p>So come travel timespace with me! Let&rsquo;s travel to better future, to make better a present, by working together to do awesome stuff that nobody has ever done! (But if you want to roll solo, do so. I of all people respect the solo lifestyle. If you want to roll solo, but still be a part of steering, just get in touch. Share your perspective. It is valuable, be it positive, neutral, or negative.)</p>
-<p>My <a href="https://blairmunroakusa.wp.computer/">personal page</a> is a good place for going deep with experimental theory and conceptual underpinnings. Otherwise, this site is a good place to call homebase if you are interested in the idea of universal peace, a process for linking our multitude of unique worlds together, so that we can all reap more profit that we otherwise would without peace as a universal process. (Creation and inclusion will always be more profitable than destruction and exclusion. I believe this.)</p>
-<p>I plan to use this blog as an origin, a central point to originate promotional activities for this project. Next stop, Kickstarter. I need to solve the money problem quicklike.</p>
-<p>-Blair</p>
 <p>CTA:
 I need help registering these trademarks. <a href="mailto:timemachine@wp.computer">Contact me to collaborate/contribute.</a> Thank you.</p>
 <p><em>Propose site changes and edits using <a href="https://github.com/wp-computer/timemachineforpeace.git">github</a>. If you don&rsquo;t know how to use github, it might be a fun and valuable resume-builder to teach yourself how!</em></p>
+<p>And some warmup pictures:</p>
 <div class="figure">
 <p><img src="https://timemachineforpeace.wp.computer/images/booth/main0612.jpg" alt=""></p>
 <p class="caption">Welcome.</p>
@@ -122,10 +133,6 @@ I need help registering these trademarks. <a href="mailto:timemachine@wp.compute
 <div class="figure">
 <p><img src="https://timemachineforpeace.wp.computer/images/booth/signage0612.jpg" alt=""></p>
 <p class="caption">Words.</p>
-</div>
-<div class="figure">
-<p><img src="https://timemachineforpeace.wp.computer/images/booth/NSA.jpg" alt=""></p>
-<p class="caption">Detach from the bullshit.</p>
 </div>
 
 
