about edit + post adds

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -91,7 +91,7 @@
                     <h1 class="mx-0 mx-md-4">About the Time Machine For Peace (a social invention project)</h1>
                     <div class="markdown">
                         
-    <p>Peace is a process, not a result.</p>
+    <p><em>Peace is a process, not a result.</em></p>
 <p>This is a site to chronicle and coordinate the Time Machine For Peace social invention project.</p>
 <p>Please visit github to view site change history.</p>
 <p>~</p>
@@ -133,6 +133,9 @@ I need help registering these trademarks. <a href="mailto:timemachine@wp.compute
 <div class="figure">
 <p><img src="https://timemachineforpeace.wp.computer/images/booth/signage0612.jpg" alt=""></p>
 <p class="caption">Words.</p>
+</div>
+<div class="figure">
+<p><img src="https://timemachineforpeace.wp.computer/images/booth/NSA.jpg" alt=""></p>
 </div>
 
 
