communication style header disclaimer

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
     
 <div class="mt-xl header">
     <div class="container">
+	    <p style="font-size:8px;">COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental.</p>
         <div class="row justify-content-center">
             <div class="col-auto">
                 <a href="https://timemachineforpeace.wp.computer/">
@@ -84,6 +85,7 @@
         </div>
     </div>
 </div>
+
 
 <div class="content">
     <div class="container">
