--- a/public/404.html
+++ b/public/404.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> 404 Page not found - Time Machine For Peace! </title>
+    <title> 404 Page not found - Time Machine For Peace. </title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="referrer" content="no-referrer">
     <meta name="description" content="" />
-    <meta property="og:site_name" content="Time Machine For Peace!" />
+    <meta property="og:site_name" content="Time Machine For Peace." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://timemachineforpeace.wp.computer/404.html" />
@@ -39,7 +39,7 @@
         href="https://timemachineforpeace.wp.computer/images/UPC.png">
 
     
-    <link href="https://timemachineforpeace.wp.computer/index.xml" rel="alternate" type="application/rss+xml" title="Time Machine For Peace!" />
+    <link href="https://timemachineforpeace.wp.computer/index.xml" rel="alternate" type="application/rss+xml" title="Time Machine For Peace." />
     
 </head>
 
