--- a/public/dedication/index.html
+++ b/public/dedication/index.html
@@ -99,9 +99,9 @@
 I dedicate the Time Machine For Peace social invention project to the following people:
 <ul>
 <li>Victims of war in all forms, both external and internal</li>
-<li>American veterans who took the oath to support and defend the values of the US Constitution <em>(not the system)</em> &hellip;especially those who paid the ultimate price &hellip;especially those combat vets who fought with eyes wide open &hellip;especially those who embrace a fierce hatred for war</li>
+<li>American veterans who took the oath to support and defend the values of the US Constitution <em>(not the system)</em> &hellip;especially those who paid the ultimate price &hellip;especially those who embrace a fierce hatred for war</li>
 <li>People struggling with mental illness</li>
-<li>Atypical people struggling to be themselves in a xenophobic judgemental world</li>
+<li>Atypical people struggling to be themselves in a judgemental xenophobic world</li>
 <li>People struggling to find their voice, because they have something they desperately need say</li>
 <li>Free thinkers who face oppression</li>
 <li>The impartial observers</li>
