--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,13 @@
                     <ul class="list-unstyled">
     
     <li>
+        <h2 class="meta-title"><a href="https://timemachineforpeace.wp.computer/blog/dailylog061621/">Daily Log: 06/16/21</a></h2>
+        <div class="meta-date">
+            <time>2021/06/16</time>
+        </div>
+    </li>
+    
+    <li>
         <h2 class="meta-title"><a href="https://timemachineforpeace.wp.computer/blog/dailylog061521/">Daily Log: 06/15/21</a></h2>
         <div class="meta-date">
             <time>2021/06/15</time>
