00 - Kickstarter Pretext writing, site edits

--- a/public/dedication/index.html
+++ b/public/dedication/index.html
@@ -113,7 +113,10 @@ I dedicate the Time Machine For Peace social invention project to the following 
 <li>Free thinkers who face oppression</li>
 <li>The interested&ndash;yet impartial&ndash;observers</li>
 <li>The overwatch</li>
+<li>My family</li>
+<li>All the people who have shared their wisdom and experience with me, either directly or indirectly, living or dead</li>
 </ul>
+<p>&hellip; if you have had a genuine or disingenuine conversation with me, no matter how short, you have contributed to this project</p>
 </font>
 
 
