update dedication to include those in law enforcement

--- a/public/dedication/index.html
+++ b/public/dedication/index.html
@@ -106,7 +106,7 @@
 I dedicate the Time Machine For Peace social invention project to the following people:
 <ul>
 <li>Victims of war in all forms, both external and internal</li>
-<li>American veterans who took the oath to support and defend the values of the US Constitution <em>(not the system)</em> &hellip;especially those who paid the ultimate price &hellip;especially those who embrace a fierce hatred for war</li>
+<li>American veterans who took the oath to support and defend the values of the US Constitution &hellip;especially those who paid the ultimate price &hellip;especially those who embrace a fierce hatred for war</li>
 <li>People struggling with mental illness</li>
 <li>Atypical people struggling to be themselves in a judgemental xenophobic world</li>
 <li>People struggling to find their voice, because they have something they desperately need to say</li>
