--- a/public/about/index.html
+++ b/public/about/index.html
@@ -128,19 +128,28 @@
                     <h1 class="mx-0 mx-md-4">About the Time Machine For Peace (a social invention project)</h1>
                     <div class="markdown">
                         
-    <p>This is a site to chronicle and coordinate the Time Machine For Peace social invention project.</p>
-<p>Please visit github to view site change history.</p>
-<p><strong>My target frequency is to update this site daily.</strong></p>
+    <p>This is a site to chronicle (and eventually coordinate) the Time Machine For Peace social invention project.</p>
+<p><em>Please visit <a href="https://github.com/wp-computer/timemachineforpeace/" target="_default">Github</a> to view site change history.</em></p>
+<p><strong>My target update frequency is daily.</strong></p>
 <div class="figure">
 <p><img src="https://timemachineforpeace.wp.computer/images/booth/UPCtopologyvisualizationA1V1.jpg" alt=""></p>
-<p class="caption">This is a diagram expressing topological gestalt.</p>
+<p class="caption">This is a diagram expressing topological gestalt. Definition of symbols are below written piece.</p>
 </div>
 <p style="font-size:9px;"><b>A NOTE ON PERSONAL STYLE:</b></p>
-<p style="font-size:9px;"><em>I operate on a different frequency. I am the producer right now. Until that changes for this project, expect constant changes everywhere, but consistently inconsistently. I am fickle, with sensitivity to initial conditions (my inner world trajectory is a multi-body problem); besides my unpredictability, I am unpredictable; I am chaotic. This is apparent because I am constantly experimenting with ideas, I move extremely quickly, and my time is so precious to me that I refuse to afford time to explain my every move unless that explanation justifies the time spent explaining. I am always tinkering with new ways of doing things, so please do not be surprised if say one thing, but end up not following through with that thing. --chances are I found a better way to thing that thing. Thankfully, I solved the multi-body problem...in my world at least.</em></p>
+<blockquote>
+<p style="font-size:9px;"><em>I operate on a different frequency. I am the producer right now. Until that changes for this project, expect constant changes everywhere, but consistently inconsistently. I am fickle, with sensitivity to initial conditions (my inner world trajectory is a multi-body problem); besides my unpredictability, I am unpredictable; I am chaotic. How this manifests itself is that I am constantly experimenting with ideas, I move extremely quickly, and my time is so precious to me that I refuse to afford time to explain my every move unless that explanation justifies the time spent explaining. I am always tinkering with new ways of doing things, so please do not be surprised if say one thing, but end up not following through with that thing. --chances are I found a better way to thing that thing. Thankfully, I solved the multi-body problem...in my world at least.</em></p>
+</blockquote>
+<blockquote>
 <p style="font-size:9px;"><em>To contradict myself, a singular consistency that will not waiver is my devotion to this project (realizing this vision in my head that has been painfully resolving for over a decade now). This consistency is the highly nonlinear concept map in my head that I use for general communication. To be honest, I place this project above everything else, because in my world, everything else depends on this project.</em></p>
-<p style="font-size:9px;"><em>If I am trying to sell anything, it is not my product, it is my process.<b> Thank you for your patience while I figure things out as I go.</b></em></p>
+</blockquote>
+<blockquote>
+<p style="font-size:9px;"><em><b><span style="color:green">If I am trying to sell anything, it is not my product, it is my process.</span> Thank you for your patience while I figure things out as I go.</b></em></p>
+</blockquote>
+<blockquote>
 <p style="font-size:9px;"><em>CTA: To better illustrate process, I need to find someone willing to invent a switch or a dial that goes after every text entry within the wp.computer domain. When 'on', or twiddled, the switch function displays differences from old commits, in a fading gray scale, black being current, lighest gray being original, or something like this. The idea is to make the power of git change-logging more accessible to people who do not have the will/ability to learn how to use a platform like github.</em></p>
-<p>For now, this site is a space chronicling my process and experience running the Alaska, Anchorage Market &lsquo;Time Machine For Peace!&rsquo; booth, and my process underlying how I am going about attempting to get this project off the ground. This will be the primary communication vehicle for getting the point across, and getting this project off the ground, up and running.</p>
+</blockquote>
+<h5 id="for-now"><strong>For now&hellip;</strong></h5>
+<p>&hellip;this site is a space chronicling my process and experience running the Alaska, Anchorage Market &lsquo;Time Machine For Peace!&rsquo; booth, and my process underlying how I am going about attempting to get this project off the ground. This will be the primary communication vehicle for getting the point across, and getting this project off the ground, up and running.</p>
 <p>Right now my primary distraction (frustration) is to figure out the best way to support myself, so that I can devote my undivided attention to the project. My problems has been that in the past, the standard fulltime-job approach would only leave me enough freetime to devote one additional job&rsquo;s worth of time to this project. I would neglect social life, because serious study has been more important to me if forced to choose. But this makes me bad-crazy. It drives me to inner war. I will not do that anymore. I am devoting myself wholly to this for a change. The money problem is too distracting. My objective is to solve it by the end of the summer, worst case.</p>
 <p>To achieve this objecetive is to free up my time to get to the real important objective: planting brain-seeds (peace nuts), by having conversations with people for the purpose of highly distributed broadcast communication, to get the idea across, so that we can have a global conversation about peace. The strategy is to take this nonlinear concept map in my head, and collect all the different linear versions of expression it takes on for all the different people I talk to, and then identify themes and common versions that work. After doing so, the idea is to integrate those themes into a generalized linear version for widescale dissemination. (a book or a movie, or whatever)</p>
 <p>So the booth is basically a Research and Development lab. All of the content platforms you might find me on will <strong>always</strong> be research and development labs. (My identity is a research and development lab. Every interaction I have with people is a research and development lab.) I recently quit my dayjob and spent almost all of my personal savings to kick myself into the deep end, put myself out there, and invest in serious research and development / market research. The investment is meant to put me in a position where I can share the monsterous idea in my head with all sorts of different people, to attain valuable wisdom and feedback I need to make the best-informed decisions possible for how to steer this project into the future. <strong>You will be the navigational experts guiding this time machine.</strong> I am just the captain.</p>
@@ -150,7 +159,7 @@
 <p>I plan to use this blog as an origin, a central point to originate promotional activities for this project. Next stop, Kickstarter. I need to solve the money and promotions problem quicklike.</p>
 <p>This domain space is meant to be the communal space in cyber-world to experiment with a new way of going about doing social media.</p>
 <p>-Blair</p>
-<p>Some symbols to make communication easier:</p>
+<h5 id="some-symbols-to-make-communication-easier"><strong>Some symbols to make communication easier:</strong></h5>
 <div class="figure" style="figure-size:small;">
 <p><img src="https://timemachineforpeace.wp.computer/images/UPC.png" alt=""></p>
 <p class="caption">Symbol for 'The Universal Peace Computer' (time machine (or trademark))</p>
@@ -163,10 +172,13 @@
 <p><img src="https://timemachineforpeace.wp.computer/images/WP.png" alt=""></p>
 <p class="caption">Symbol for 'world piece' (or peace, if referring to the ideal) (time machine (or trademark))</p>
 </div>
+<blockquote>
 <p>CTA:
-I need help registering these trademarks. This will be important for protection. We want to avoid a <a href="https://en.wikipedia.org/wiki/Feels_Good_Man" target="_default">Pepe the Frog situation</a>, to help protect the project from being distorted and perverted into a symbol of hate. <a href="mailto:timemachine@wp.computer">Contact me to collaborate/contribute.</a> Thank you.</p>
+I need help registering these trademarks. This will be important for protection. We want to avoid a <a href="https://en.wikipedia.org/wiki/Feels_Good_Man" target="_default">Pepe the Frog situation</a>, to help protect the project from being distorted and perverted into a symbol of hate.</p>
+<p><a href="mailto:timemachine@wp.computer">Contact me to collaborate/contribute.</a> Thank you.</p>
+</blockquote>
 <p><em>Propose site changes and edits using <a href="https://github.com/wp-computer/timemachineforpeace.git">github</a>. If you don&rsquo;t know how to use github, it might be a fun and valuable resume-builder to teach yourself how!</em></p>
-<p>And some warmup pictures:</p>
+<h5 id="and-some-warmup-booth-pictures"><strong>And some warmup booth pictures:</strong></h5>
 <div class="figure">
 <p><img src="https://timemachineforpeace.wp.computer/images/booth/main0612.jpg" alt=""></p>
 <p class="caption">Welcome.</p>
