--- a/public/faq/overview/index.html
+++ b/public/faq/overview/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Market Recap: 06/13/21 - Time Machine For Peace. </title>
+    <title> _FAQ Overview - Time Machine For Peace. </title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="referrer" content="no-referrer">
@@ -12,18 +12,18 @@
     <meta property="og:site_name" content="Time Machine For Peace." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://timemachineforpeace.wp.computer/booth/marketrecap061321/" />
-    <meta property="og:title" content="Market Recap: 06/13/21" />
+    <meta property="og:url" content="https://timemachineforpeace.wp.computer/faq/overview/" />
+    <meta property="og:title" content="_FAQ Overview" />
     <meta property="og:image" content="https://timemachineforpeace.wp.computer/" />
     <meta property="og:description" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     
-    <meta name="twitter:title" content="Market Recap: 06/13/21" />
+    <meta name="twitter:title" content="_FAQ Overview" />
     <meta name="twitter:description" content="" />
     <meta name="twitter:image" content="https://timemachineforpeace.wp.computer/" />
 
-    <link rel="canonical" href="https://timemachineforpeace.wp.computer/booth/marketrecap061321/">
+    <link rel="canonical" href="https://timemachineforpeace.wp.computer/faq/overview/">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha512-MoRNloxbStBcD8z3M/2BmnT+rg4IsMxPkXaGh2zD6LGNNFE80W3onsAhRcMAMrSoyWL9xD7Ert0men7vR8LUZg==" crossorigin="anonymous" />
 
@@ -132,11 +132,30 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-lg-8">
-                    <h1 class="mx-0 mx-md-4">Market Recap: 06/13/21</h1>
+                    <h1 class="mx-0 mx-md-4">_FAQ Overview</h1>
                     <div class="markdown">
                         
-    <p>~ to update after process day {06/14} riding four wheelers for gas cash ~</p>
-<p>-Blair</p>
+    <p>Ok. After doing some timespace travel to review my past experience, I determined that I need to avoid some past communication mistakes. Instead of feeling like I need to linearize my headspace all at once for some invisible imaginary general audience in my head, I will instead approach content delivery as an interactive choose-your-own-adventure.</p>
+<p><strong>This section will be the most important section within the timemachineforpeace subdomain space.</strong></p>
+<p>The FAQ section is a collection of answers to common questions that people close to me have asked over the years, and answers to common questions that people from the Anchorage Market booth have asked over the course of the summer.</p>
+<p>I have included email links for you to ask a question of your own. I will prioritize answering questions that are common, or important enough to address sooner than others.</p>
+<p>Regardless of whether or not I answer, your questions serve as valuable data for moving forward with this project.</p>
+<p>Think of this like a choose-your-own-adventure conversational experience.</p>
+<p>If some aspect of this FAQ or site contents pops out at you as not-quite-clear, or interesting enough to have a conversation about, come up with a simple question to guide the conversation. This helps me linearize the sprawling thing in my head. It really helps a lot.</p>
+<div class="figure">
+<p><img src="https://timemachineforpeace.wp.computer/images/faq/faqMindmap1.jpg" alt=""></p>
+</div>
+<p>^</p>
+<p>These are pictures of a mindmap (armmap) outline for the FAQ (conversation) section.</p>
+<p>v</p>
+<div class="figure">
+<p><img src="https://timemachineforpeace.wp.computer/images/faq/faqMindmap2.jpg" alt=""></p>
+</div>
+<p><a href="mailto:timemachine@wp.computer?subject=I have a general question."><b>CLICK TO SUBMIT A QUESTION</b></a></p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p><a href="https://timemachineforpeace.wp.computer/faq/">RETURN TO FAQ</a></p>
 
 
 
