--- a/public/faq/why/index.html
+++ b/public/faq/why/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Market Recap: 06/13/21 - Time Machine For Peace. </title>
+    <title> Why? - Time Machine For Peace. </title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="referrer" content="no-referrer">
@@ -12,18 +12,18 @@
     <meta property="og:site_name" content="Time Machine For Peace." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://timemachineforpeace.wp.computer/booth/marketrecap061321/" />
-    <meta property="og:title" content="Market Recap: 06/13/21" />
+    <meta property="og:url" content="https://timemachineforpeace.wp.computer/faq/why/" />
+    <meta property="og:title" content="Why?" />
     <meta property="og:image" content="https://timemachineforpeace.wp.computer/" />
     <meta property="og:description" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     
-    <meta name="twitter:title" content="Market Recap: 06/13/21" />
+    <meta name="twitter:title" content="Why?" />
     <meta name="twitter:description" content="" />
     <meta name="twitter:image" content="https://timemachineforpeace.wp.computer/" />
 
-    <link rel="canonical" href="https://timemachineforpeace.wp.computer/booth/marketrecap061321/">
+    <link rel="canonical" href="https://timemachineforpeace.wp.computer/faq/why/">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha512-MoRNloxbStBcD8z3M/2BmnT+rg4IsMxPkXaGh2zD6LGNNFE80W3onsAhRcMAMrSoyWL9xD7Ert0men7vR8LUZg==" crossorigin="anonymous" />
 
@@ -132,11 +132,19 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-lg-8">
-                    <h1 class="mx-0 mx-md-4">Market Recap: 06/13/21</h1>
+                    <h1 class="mx-0 mx-md-4">Why?</h1>
                     <div class="markdown">
                         
-    <p>~ to update after process day {06/14} riding four wheelers for gas cash ~</p>
-<p>-Blair</p>
+    <h6 id="this-is-a-very-deep-and-common-question">This is a very deep and common question.</h6>
+<h6 id="i-will-dump-common-variants-for-now-hardest-to-easiest-organize-later">I will dump common variants for now, hardest to easiest, organize later.</h6>
+<h4 id="why-blair"><strong>Why, Blair?</strong></h4>
+<p><font size=3>~ Well, why not. Truthfully though, this is a primal compulsion. I cannot escape this drive inside me. I have tried to change this aspect of my being with medicine, drugs, alcohol, escapism, etc. I have tried in the most extreme of ways to force myself to not be this. I have tried to forcibly suppress this compulsion. Every time I deny this compulsion, my inside becomes war. Inner war is ..very bad for me. My inner cycle of war has been escalating for years. Accepting myself for what I am and relenting to my compulsion is the only way I know how to break the cycle of inner war. This is happening. Besides, I am happier when I am honest about who I am. I used to do this strictly in private. Now I would rather invent a way to do it around people. I am in pursuit of happiness, health, and prosperity.</font></p>
+<p><font size=3>~ I am a lifelong learner. I am studying the universe. I am investing in my next education. I have never done anything like this before. I need to put myself in a position were I can learn deeper lessons about the surrounding universe. I need to put myself in a position to learn from the living Human influences that made me who I am. I need to compare the image I hold of them against their object. This is ultimately to learn more about myself. Understanding how Humans work is probably my primary learning objective. I also have a collection of high-level theses, questions, and hypotheses about the universe that I need to test and explore before I die. This is part of my compulsion.</font></p>
+<p><a href="mailto:timemachine@wp.computer?subject=Why?"><b>CLICK TO SUBMIT A QUESTION</b></a></p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p><a href="https://timemachineforpeace.wp.computer/faq/">RETURN TO FAQ</a></p>
 
 
 
