new kickstarter project description

--- a/public/kickstarter/campaignprofile/index.html
+++ b/public/kickstarter/campaignprofile/index.html
@@ -175,32 +175,25 @@
 <p>Although viral growth for some aspects of this project will be unavoidable, I believe that active anticipation of such growth is enough to in our local conversations to mitigate the risks of perversion and distortion by group mind mentalities.</p>
 <p><strong>~~~~~~~~~~~~~~~~~~~~~~~~~~~~</strong></p>
 <h5 id="kickstarter-objectives"><strong>Kickstarter Objectives:</strong></h5>
-<p><strong>1 - Raise money to work on this project full time for at least one year.</strong>
-This will buy me the time I need to stay physically, and socially healthy (thus mentally), while still committing 60-80 hours per week toward figuring out the best way to orchestrate the time machine for peace social invention project, to eventually distribute the work load to free up my time for the higher-level theoretical work that interests me.
-<strong>2 - Figure out the best way to network with like-minded people (people operating on my frequency) who are qualified to help.</strong>
-My specialty is generalism. This means I am bad at doing specific things (usually just good enough to get myself into trouble), but good at integrating expertise. Generalists need help from specialists, and other generalists.
-<strong>3 - Refine these ideas in real time, with active feedback from the Kickstarter community.</strong>
-I debug in production.
-<strong>4 - Start a serious (active and deliberate) conversation about universal peace within the Kickstarter community headspace.</strong>
-In our individual worlds and our local communities, how can we consciously and actively frame what we do in terms of peace as an inclusive, continuously evolving process?
-<strong>5 - Inspire people to get excited&ndash;yet realistic&ndash;about peace.</strong>
-This project makes me excited to get out of bed in the morning. Regardless of this Kickstarter&rsquo;s success, if I can have that effect on somebody else, I have met personal success.</p>
+<p><strong>1 - Raise money to work on this project full time for at least one year.</strong></p>
+<p><em>This will buy me the time I need to stay physically, and socially healthy (thus mentally), while still committing 60-80 hours per week toward figuring out the best way to orchestrate the time machine for peace social invention project, to eventually distribute the work load to free up my time for the higher-level theoretical work that interests me.</em></p>
+<p><strong>2 - Figure out the best way to network with like-minded people (people operating on my frequency) who are qualified to help.</strong></p>
+<p><em>My specialty is generalism. This means I am bad at doing specific things (usually just good enough to get myself into trouble), but good at integrating expertise. Generalists need help from specialists, and other generalists.</em></p>
+<p><strong>3 - Refine these ideas in real time, with active feedback from the Kickstarter community.</strong></p>
+<p><em>I debug in production.</em></p>
+<p><strong>4 - Start a serious (active and deliberate) conversation about universal peace within the Kickstarter community headspace.</strong></p>
+<p><em>In our individual worlds and our local communities, how can we consciously and actively frame what we do in terms of peace as an inclusive, continuously evolving process?</em></p>
+<p><strong>5 - Inspire people to get excited&ndash;yet realistic&ndash;about peace.</strong></p>
+<p><em>This project makes me excited to get out of bed in the morning. Regardless of this Kickstarter&rsquo;s success, if I can have that effect on somebody else, I have met personal success.</em></p>
 <p><strong>~~~~~~~~~~~~~~~~~~~~~~~~~~~~</strong></p>
 <h5 id="budget"><strong>Budget:</strong></h5>
 <p>(includes personal expenses, and costs of personal invention efforts at the moment)</p>
-<p>personal overhead (utilities, transportation, housing, food, insurance, entertainment)
-$3,000/month</p>
-<p>project overhead (storage for materials, cost of services and subscriptions, miscellaneous supplies, tinker money)</p>
-<ul>
-<li>Work space not included&hellip; I wish to maintain a distributed community workspace for this project, provided by space-contributions.
-$1,000/month</li>
-</ul>
-<p>nest egg for taxes and the unexpected (vehicle break-down, insurance deductible)
-$12,000</p>
-<p>cost of support tokens (button pins) and fulfillment
-? $5,000 ?</p>
+<p>personal overhead (utilities, transportation, housing, food, insurance, entertainment) == $3,000/month</p>
+<p>project overhead (storage for materials, cost of services and subscriptions, miscellaneous supplies, tinker money) Work space not included&hellip; I wish to maintain a distributed community workspace for this project, provided by space-contributions. == $1,000/month</p>
+<p>nest egg for taxes and the unexpected (vehicle break-down, insurance deductible) == $12,000</p>
+<p>cost of support tokens (button pins) and fulfillment == $5,000 {? need to figure this out}</p>
 <p>Campaign funding objective:</p>
-<p>$65,000</p>
+<p><strong>$65,000</strong></p>
 <p>Any funds secured in excess of funding objective will be reserved in savings to pay for future years&rsquo; work.</p>
 <p>I intend to place all funds in a transparent Open Collective account.</p>
 <p><strong>~~~~~~~~~~~~~~~~~~~~~~~~~~~~</strong></p>
@@ -237,7 +230,11 @@ Blair Munro</p>
 <p><strong>~ What about the AI singularity?</strong></p>
 <p>Whether or not the AGI singularity happens via electronic computers (quantum or traditional) I think is moot. I think the safe (conservative) approach is to expect it to happen, and be prepared to educate the AGI. The Universal Peace Computer would place us in a position to do this, because the analog to Artificial Intelligence is actual intelligence, which consists of Human brains.</p>
 <p><strong>~ Are you on drugs?</strong></p>
-<p>Sometimes. I engage in periods where I consume THC regularly, and this helps me make creative associations and vibe harder to my favorite music. I cannot sustain use however, because this makes my delusions unmanageable. At the moment, I am not consuming much THC at all. In the past I have struggled with hard drugs, but that is no longer an issue (I subscribe to a recovery program called &lsquo;<a href="https://www.smartrecovery.org">SMART</a>&rsquo;, which I highly recommend). If, for the purpose of sponsorship or funding you would request I relinquish my right to privacy and submit to a drug test, I will happily do so for $130,000 ($30,000 toward taxes, the rest for some pocket change). It would be easier for all parties if you just have a candid conversation with me about this stuff instead.</p>
+<p>Sometimes. I engage in periods where I consume THC regularly, and this helps me make creative associations and vibe harder to my favorite music. I cannot sustain use however, because this makes my delusions unmanageable. At the moment, I am not consuming much THC at all. In the past I have struggled with abusing drugs, but that is no longer much of an issue (I subscribe to a recovery program called &lsquo;<a href="https://www.smartrecovery.org">SMART</a>&rsquo;, which I highly recommend). If, for the purpose of sponsorship or funding you would request I relinquish my right to privacy and submit to a drug test, I will happily do so for $130,000 ($30,000 toward taxes, the rest for some pocket change). It would be easier for all parties if you just have a candid conversation with me about this stuff instead.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>This list is long, but I plan to add more question-anwsers as people ask. I will prioritize questions that emphasize the Human element of placing people first, and safety.</p>
 
 
 
