--- a/public/kickstarter/campaignprofilev2/index.html
+++ b/public/kickstarter/campaignprofilev2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Project Description V2, 06/20/21 - Time Machine For Peace. </title>
+    <title> Project Description V2, 06/23/21 - Time Machine For Peace. </title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="referrer" content="no-referrer">
@@ -13,13 +13,13 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://timemachineforpeace.wp.computer/kickstarter/campaignprofilev2/" />
-    <meta property="og:title" content="Project Description V2, 06/20/21" />
+    <meta property="og:title" content="Project Description V2, 06/23/21" />
     <meta property="og:image" content="https://timemachineforpeace.wp.computer/" />
     <meta property="og:description" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     
-    <meta name="twitter:title" content="Project Description V2, 06/20/21" />
+    <meta name="twitter:title" content="Project Description V2, 06/23/21" />
     <meta name="twitter:description" content="" />
     <meta name="twitter:image" content="https://timemachineforpeace.wp.computer/" />
 
@@ -139,16 +139,16 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-lg-8">
-                    <h1 class="mx-0 mx-md-4">Project Description V2, 06/20/21</h1>
+                    <h1 class="mx-0 mx-md-4">Project Description V2, 06/23/21</h1>
                     <div class="markdown">
                         
     <p>This is a planet-benefit project.</p>
 <blockquote>
 <p>Current pretext note, 062321:</p>
-<p>Instead of attempting to describe this big idea in a pretty package, this Kickstarter, and the paper trail that represents my efforts, will serve as an imperfect example of universal peace. Instead of attempting to tell you, I will do my best to show you. This campaign will probably change dramatically over the course of the next two months. Hopefully after meeting the funding goal, by a year&rsquo;s end following the conclusion of this campaign, I will have a pretty packaged current edition of the big idea to share. This package will be more accessible, and never complete.</p>
+<p>Instead of attempting to describe this big idea in a pretty package, this Kickstarter and the paper trail that represents my efforts, will serve as an imperfect example of universal peace. Instead of attempting to just tell you, I will do my best to show you. This campaign will probably change dramatically over the course of the next two months. Hopefully after meeting the funding goal, by a year&rsquo;s end following the conclusion of this campaign, I will have a pretty packaged current edition of the big idea to share. This package will be more accessible, and never complete.</p>
 <p>My time will be occupied with research and development at the Anchorage Saturday Market Friday thru Sunday, so I will not have much time on these days to tend to this Kickstarter campaign.</p>
 <p>I need to make a video, but I don&rsquo;t know how. Every time I attempt to package the whole idea in a video form, or written, I get stuck. This is extremely frustrating and I need help with this.</p>
-<p>I am extremely overwhelmed by all this. I genuinely do not know what the best way of going about getting this idea out of my head is, and supporting myself and mental wellbeing while I do so. Thank you for your patience while I figure this out as I go.</p>
+<p>I am overwhelmed by all this. I genuinely do not know what the best way of going about getting this idea out of my head is, and supporting myself and mental wellbeing while I do so. Thank you for your patience while I figure this out as I go.</p>
 <blockquote>
 <p>I am trying to solve the Human time / energy problem, and I am using myself as a test subject&hellip;</p>
 <p>&hellip;actual intelligence algorithm under active test:</p>
