--- a/public/kickstarter/index.html
+++ b/public/kickstarter/index.html
@@ -151,7 +151,7 @@
                         <ul>
                             
                                 <li>
-                                    <a href="https://timemachineforpeace.wp.computer/kickstarter/garbage1/"><span>Garbage 1</span></a>
+                                    <a href="https://timemachineforpeace.wp.computer/kickstarter/garbage1/"><span>Garbage 1, 061621</span></a>
                                 </li>
                             
                                 <li>
