video process addition for kickstarter

--- a/public/kickstarter/campaignprofilev2/index.html
+++ b/public/kickstarter/campaignprofilev2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Project Description V2, 06/23/21 - Time Machine For Peace. </title>
+    <title> 06/23/21 - Project Description V2 - Time Machine For Peace. </title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="referrer" content="no-referrer">
@@ -13,13 +13,13 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://timemachineforpeace.wp.computer/kickstarter/campaignprofilev2/" />
-    <meta property="og:title" content="Project Description V2, 06/23/21" />
+    <meta property="og:title" content="06/23/21 - Project Description V2" />
     <meta property="og:image" content="https://timemachineforpeace.wp.computer/" />
     <meta property="og:description" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     
-    <meta name="twitter:title" content="Project Description V2, 06/23/21" />
+    <meta name="twitter:title" content="06/23/21 - Project Description V2" />
     <meta name="twitter:description" content="" />
     <meta name="twitter:image" content="https://timemachineforpeace.wp.computer/" />
 
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-lg-8">
-                    <h1 class="mx-0 mx-md-4">Project Description V2, 06/23/21</h1>
+                    <h1 class="mx-0 mx-md-4">06/23/21 - Project Description V2</h1>
                     <div class="markdown">
                         
     <p>This is a planet-benefit project.</p>
