--- a/public/kickstarter/campaignprofile/index.html
+++ b/public/kickstarter/campaignprofile/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Project Description, 06/20/21 - Time Machine For Peace. </title>
+    <title> 06/20/21 - Project Description - Time Machine For Peace. </title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="referrer" content="no-referrer">
@@ -13,13 +13,13 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://timemachineforpeace.wp.computer/kickstarter/campaignprofile/" />
-    <meta property="og:title" content="Project Description, 06/20/21" />
+    <meta property="og:title" content="06/20/21 - Project Description" />
     <meta property="og:image" content="https://timemachineforpeace.wp.computer/" />
     <meta property="og:description" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     
-    <meta name="twitter:title" content="Project Description, 06/20/21" />
+    <meta name="twitter:title" content="06/20/21 - Project Description" />
     <meta name="twitter:description" content="" />
     <meta name="twitter:image" content="https://timemachineforpeace.wp.computer/" />
 
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-lg-8">
-                    <h1 class="mx-0 mx-md-4">Project Description, 06/20/21</h1>
+                    <h1 class="mx-0 mx-md-4">06/20/21 - Project Description</h1>
                     <div class="markdown">
                         
     <h5 id="hi-im-blair"><strong>Hi! I&rsquo;m Blair.</strong></h5>
