--- a/public/kickstarter/garbage1/index.html
+++ b/public/kickstarter/garbage1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Garbage 1, 061621 - Time Machine For Peace. </title>
+    <title> 06/16/21 - Garbage 1 - Time Machine For Peace. </title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="referrer" content="no-referrer">
@@ -13,13 +13,13 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://timemachineforpeace.wp.computer/kickstarter/garbage1/" />
-    <meta property="og:title" content="Garbage 1, 061621" />
+    <meta property="og:title" content="06/16/21 - Garbage 1" />
     <meta property="og:image" content="https://timemachineforpeace.wp.computer/" />
     <meta property="og:description" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     
-    <meta name="twitter:title" content="Garbage 1, 061621" />
+    <meta name="twitter:title" content="06/16/21 - Garbage 1" />
     <meta name="twitter:description" content="" />
     <meta name="twitter:image" content="https://timemachineforpeace.wp.computer/" />
 
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-lg-8">
-                    <h1 class="mx-0 mx-md-4">Garbage 1, 061621</h1>
+                    <h1 class="mx-0 mx-md-4">06/16/21 - Garbage 1</h1>
                     <div class="markdown">
                         
     <p><del>00 - Kickstarter Pretext</del></p>
