homepage update, prep for kickstarter release

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     
 <div class="mt-xl header">
     <div class="container">
-	    <p style="font-size:8px;">COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental.</p>
+	    <p style="font-size:6px;">UNIVERSAL PEACE TRANSPARENCY - COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental. SAFETY: These ideas can be very stimulating. Please do not let exploring these ideas come at the cost of complete destabilization in your world. Complete destabilization is dangerous and can easily turn destructive, which in general runs contrary to the mission to accelerate the advent of world peace.  If you need to take a break, take a break. If you ever feel like you are losing stability, at risk for complete destabilization, please consider seeking out professional help immediately.</p>
         <div class="row justify-content-center">
             <div class="col-auto">
                 <a href="https://timemachineforpeace.wp.computer/">
@@ -128,15 +128,19 @@
             </ul>
 
         </div>
-	<p style="font-size:12px"><b><span style="color:gold">This is an art exhibit.</span> <span style="color:crimson">It is a particular kind of creative communication experience.</span> <span style="color:royalblue">To follow linearized exhibit process, I recommend exploring the menu sections from left to right.</span></b></p>
+	<p style="font-size:12px"><b><span style="color:gold">This is like an art exhibit.</span> <span style="color:crimson">It is a particular kind of creative communication experience.</span> <span style="color:royalblue">To follow linearized exhibit process, I recommend exploring the menu sections from left to right.</span></b></p>
 	    <p>.</p>
 	    <p>.</p>
 	    <p>.</p>
     </div>
 </div>
 
-<p>Blair, for the next image of this site, you should break the sections into themes that the different people who visit your booth express and interest in, like mental health, economics, war, etc. Maybe you could create a parallel version of the tmfp that is more accessible along these lines...? -Blair</p>
-
+<p>07/29/2021 - This website will be archived and replaced by something more functional in the near future. For now, this serves as a universal peace transparency for sharing the evolution of my process in preparing to launch the Time Machine For Peace: A Social Invention Project Kickstarter campaign.</p>
+<p>NOTE REGARDING THE UNIVERSAL PEACE PLAN:</p>
+<p>timemachineforpeace.wp.computer will be a primary subdomain within The Universal Peace Plan, which will for now be a collection of subdomains within the wp.computer (world piece computer) and up.computer (universal peace computer) domain space. For practical purposes, The Universal Peace Plan will be accessible via theuniversalpeaceplan.wp.computer and theuniversalpeaceplan.up.computer, which will serve as a subspace to index the subdomains relating to the Time Machine For Peace, and the plan for turning it into a sustainable social invention project.</p>
+<p>Some examples: blairmunroakusa.wp.computer and blairmunroakusa.up.computer is a subspace hosting the image of my personal world piece computer. growth.wp.computer and growth.up.computer will be a subspace for outlining the growth strategy and plan within The Universal Peace Plan. The apex subdomains apx.wp.computer and apx.up.computer will form a subspace devoted to general attributes underlying world piece computers and The Universal Peace Computer.</p>
+<p> <a href="https://blairmunroakusa.wp.computer/">blairmunroakusa.wp.computer</a> is a cross-transparency.</p>
+<p>For specific focus on context regarding the Kickstarter, view the 'Kickstarter' tab first.</p>
 
 
 <div class="content">
