--- a/public/kickstarter/projectdescriptionvideopractice0715/index.html
+++ b/public/kickstarter/projectdescriptionvideopractice0715/index.html
@@ -47,7 +47,7 @@
     
     <div class="mt-xl header">
     <div class="container">
-	    <p style="font-size:8px;">COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental.</p>
+	    <p style="font-size:6px;">UNIVERSAL PEACE TRANSPARENCY - COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental. SAFETY: These ideas can be very stimulating. Please do not let exploring these ideas come at the cost of complete destabilization in your world. Complete destabilization is dangerous and can easily turn destructive, which in general runs contrary to the mission to accelerate the advent of world peace.  If you need to take a break, take a break. If you ever feel like you are losing stability, at risk for complete destabilization, please consider seeking out professional help immediately.</p>
         <div class="row justify-content-center">
             <div class="col-auto">
                 <a href="https://timemachineforpeace.wp.computer/">
@@ -127,7 +127,7 @@
             </ul>
 
         </div>
-	<p style="font-size:12px"><b><span style="color:gold">This is an art exhibit.</span> <span style="color:crimson">It is a particular kind of creative communication experience.</span> <span style="color:royalblue">To follow linearized exhibit process, I recommend exploring the menu sections from left to right.</span></b></p>
+	<p style="font-size:12px"><b><span style="color:gold">This is like an art exhibit.</span> <span style="color:crimson">It is a particular kind of creative communication experience.</span> <span style="color:royalblue">To follow linearized exhibit process, I recommend exploring the menu sections from left to right.</span></b></p>
 	    <p>.</p>
 	    <p>.</p>
 	    <p>.</p>
@@ -154,9 +154,15 @@
 </div>
 
 <p>. My treatment of the 2nd law of thermodynamics makes me cringe in horror inside. The treatment presented makes it sound like the 2nd law is defined in terms of violating energy conservation, which is strictly untrue.</p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/svEqDS1NLH4" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
 <h5 id="educational-supplements">Educational supplements</h5>
 <p><a href="https://www.khanacademy.org/science/ap-physics-2/ap-thermodynamics/ap-laws-of-thermodynamics/v/second-law-of-thermodynamics">second law of thermodynamics, Khan Academy</a></p>
-<p><a href="https://www.youtube.com/watch?v=C5DfnIjZPGw">Hard Problem of Consciousness overview, David Chalmers</a></p>
+<p><a href="https://www.youtube.com/watch?v=C5DfnIjZPGw">Hard Problem of Consciousness overview, Serious Science, David Chalmers</a></p>
+<p><a href="https://www.youtube.com/watch?v=uhRhtFFhNzQ">Hard Problem of Consciousness overview, TED, David Chalmers</a></p>
 <h4 id="071721">07/17/21</h4>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
